--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="invisivel">
             <p>Vai tomar no cu!</p>
             <img src="https://pbs.twimg.com/media/EuaWV4iWYAUy83C.jpg">
-            <audio src="som.mp3"></audio>
+            <audio src="som.mp3" loop></audio>
         </div>
     </body>
         <script src="script.js"></script>
